added note on prospect theory and game rules

--- a/content/post/2020-10-28-idea-for-casino-games-where-the-player-almost-always-win.Rmd
+++ b/content/post/2020-10-28-idea-for-casino-games-where-the-player-almost-always-win.Rmd
@@ -12,12 +12,42 @@ tags:
   - probability
   - expected value
 slug: idea-for-casino-games-where-the-player-almost-always-win
-thumbnail: https://www.thesun.co.uk/wp-content/uploads/2017/11/tmp_6e95hn_8581834aa802f9b6_wv_publicity_post_launch_still_10-0000011.jpg
+thumbnail: https://upload.wikimedia.org/wikipedia/commons/thumb/8/85/Loss_Aversion.png/330px-Loss_Aversion.png
 ---
 
-*In this post, I will describe an example of a game that produces many small wins for the player and occasional large wins for the house. Such a game (theoretically) takes advantage of psychological biases of individuals to prefer gains to be disaggregated and losses to be aggregated^[Picture the pattern of gains and losses in the stock market -- where rises are typically more incremental compared to the steepness of drops.] as well as a general disposition for accepting small sure-things when it comes to gains and a willingness to chance higher-risk scenarios in order to avoid paying losses. An inverse roulette wheel (where the point is not to land on a chosen number) provides a simple example of a game that captures these dynamics^[Imagine Russian Roulette but where the gun is aimed at your wallet (and you get payed each time you dodge the bullet). Credit card roulette perhaps provides a less dramatic examples.].* 
+*In this post, I will describe an example of a game that produces many small wins for the player and occasional large wins for the house. Such a game could take advantage of psychological biases of individuals to prefer gains to be disaggregated and losses to be aggregated^[Picture the pattern of gains and losses in the stock market -- where rises are typically more incremental compared to the steepness of drops.] as well as a general disposition for accepting small sure-things when it comes to gains and a willingness to chance higher-risk scenarios in order to avoid paying losses (see [Note on Prospect Theory] for why this second assertion may be inappropriate for the games I describe).*
 
-*All proposals described in this post are theoretical and would need to be reviewed in a gambling / gaming environment. The ideas described are very much in a draft form^[There is a decent chance I misapplied some concepts -- particularly regarding the idea of risk seeking when it comes to losses (e.g. if it's more about seeking uncertainty vs seeking riskiness...). What I describe also seems to run counter to the idea that sporadic positive events help drive repeat behaviors whereas sporadic negative shocks drive avoidance of the activity. Generally I would need to think about and read a little more...]. The games discussed align with some psychological biases while potentially running counter to others^[For example people's tendency to underweight rare events and a closer consideration of the importance of reference points are just a few ideas that require closer consideration.] -- reading more on [prospect theory](https://en.wikipedia.org/wiki/Prospect_theory) and related ideas is required to more carefully consider approaches in game design.*
+*A negated roulette wheel (where the point is to avoid, rather than land on, a specific number) provides a simple example of a game that captures these dynamics^[Credit card roulette (whereby friends throw in their cards at the end of dinner to see who will end-up paying for it) perhaps provides an everyday example for the type of game I'm talking about.].* 
+
+All types of games described in this post would need to be empirically evaluated in a gambling / gaming environment. The ideas are very much in a draft form^[There is a decent chance I misapplied some concepts -- particularly regarding the idea of risk seeking when it comes to losses (e.g. if it's more about seeking uncertainty vs seeking riskiness...). What I describe also seems to run counter to the idea that sporadic positive events help drive repeat behaviors whereas sporadic negative shocks drive avoidance of the activity. Generally I would need to think about and read a little more...]. The games discussed align with some psychological biases while potentially running counter to others^[A potential issue with my examples is with the 'framing effect' -- I largely frame things in terms of 'losses' (particularly in the [Wallet Roulette] game which may actually push players towards more risk-averse behavior. For example people's tendency to underweight rare events and a closer consideration of the importance of reference points are just a few ideas that require closer consideration.] -- reading more on [prospect theory](https://en.wikipedia.org/wiki/Prospect_theory) and related ideas is required to more carefully consider approaches in game design[^5].
+
+# Note on Prospect Theory
+
+*Section added after publishing post and after reading a little about Prospect Theory. You may want to skip this section and come back to it at the end.*
+
+The course materials I reference in this post are themselves referencing research on when a player is facing *either* only gains (gauranteed gain vs possible gain) or only losses (gauranteed loss vs possible loss). However in gambling the problem is mixed. Players face both the possibility of gains *or* losses on any given bet. Khaneman describes the differences in the mixed case in *Chapter 26, Prospect Theory* of his book *Thinking Fast and Slow*:
+
+> "In mixed gambles, where both a gain and a loss are possible, loss aversion causes extremely risk averse choices. In bad choices, where a sure loss is compared to a larger loss that is merely probable, diminishing sensitity causes risk seeking. There is no contradiction. In the mixed case the possible loss looms twice as large as the possible gain."
+
+This suggests that my assertions throughout later parts of this post regarding risk seeking behaviors are likely incorrect. This *does not present* a problem for my references of people's preference for aggregated losses and disaggregated gains. 
+
+It remains possible that multiple gains may represent greater value than a single loss. The chart below shows a typical example of the assymetric S-shaped value function associated with gains/losses in Prospect Theory. Even with this assymetry it is clear that three gains (i.e. wins) of \$0.05 would more than offset a single loss of \$0.15 (assuming the value derived from individual gains can be aggregated linearly). Hence the types of games I describe may still be worth exploring in gambling contexts.
+
+![](https://upload.wikimedia.org/wikipedia/commons/thumb/8/85/Loss_Aversion.png/1024px-Loss_Aversion.png)
+*(Image from Wikipedia page on [Prospect Theory](https://en.wikipedia.org/wiki/Prospect_theory))*
+
+One explanation for why people gamble at all is people's tendency to overweight the likelihood of rare events^[I.e. they *think* they have a better chance of winning that they do.]. While this explains participation in lotteries it does not explain all forms of gambling. These other forms of gambling present additional challenges for Prospect Theory^[As well as other behavioral economic theories] to explain. Nick Barberis attempts to explain gambling in [A Model of Casino Gambling](http://www.econ.yale.edu/~shiller/behfin/2009_03/barberis.pdf) where he writes: 
+
+>"What is the intuition for why, in spite of loss aversion, a prospect theory agent might
+still be willing to enter a casino?... We show that, if the agent enters
+the casino, his preferred plan is to gamble as long as possible if he is winning, but to stop
+gambling and leave the casino if he starts accumulating losses."
+
+The games I describe may appeal to this particular type of agent in that the games I describe are designed for the player to accumulate wins. 
+
+The paper describes gamblers with different starting profiles. Variety in motivations and behaviors of gamblers opens the possibility that the types of games discussed in this blog post may appeal to a certain set of players (particularly those that are motivated by the feeling of winning rather than an overweighting of the tails of the probability distribution^[This is also a more optimistic outlook on the value players derive from gambling.]). 
+
+# Biases in Value
 
 On Wednesday's I co-lead an internal study group on Pricing Strategy. We just finished week four of [Customer Value in Pricing Strategy](https://www.coursera.org/learn/uva-darden-bcg-pricing-strategy-customer-value/home/week/4). The material in this section is devoted almost entirely to the various conditions under which people behave 'irrationally'^[I am also in the middle of reading Khaneman's highly related seminal book "Thinking Fast and Slow".] and how / when a firm can manipulate the psychology of customers to demand a higher price for their products. The subject matter is rife with ethical dilemmas; setting these aside, the material sparked an idea for a new spin on games and gambling.
 
@@ -70,7 +100,7 @@ There are a variety of forms this game could be tested in -- it doesn't have to 
 
 ## Wallet Roulette
 
-*Below I will describe the rules for a game that I've come-up with called "Wallet Roulette^[or "Russian Wallet Roulette" or some variation on this.]" that is designed to take advantage of the ideas described in the post above. The game is set-up to look and feel somewhat similar to a slot machine but with a win / loss structure that is slightly inverted compared to typical slots^[I.e. the player typically has small wins followed by occasional large losses whereas slots tend to have small losses with occasionally larger wins. However in the "Game Options" I provide ways by which a player could set their own risk levels (e.g. by filling their gun with more bullets). Hence I also envision the game having a bit more customizability compared to what is typical in slots.].*
+*Below I will describe the rules for a game that I've come-up with called "Wallet Roulette^[or "Russian Wallet Roulette" or some variation on this.]" that is designed to take advantage of the ideas described in the post above (the game though does not reflect a complete embodiment of Prospect Theory applied to gambling^[See footnotes from beginning of post for notes on this... obviously though this game is framed as a loss, which may run counter to the type of game that a Prospect Theory agent may want to play.]). The game is set-up to look and feel somewhat similar to a slot machine but with a win / loss structure that is almost the [complement](https://en.wikipedia.org/wiki/Complementary_event) of that in slots^[I.e. the player typically has small wins followed by occasional large losses whereas slots tend to have small losses with occasionally larger wins. However in the "Game Options" I provide ways by which a player could set their own risk profile (e.g. by filling their gun with more bullets, changing the cylinder size, etc.). Hence I also envision the game having a bit more customizability compared to what is typical in slots.].*
 
 The virtual game is set in a dingy bar-like setting with shady (though cartoonish) figures holding wads of cash in their hands and crowded at the edges of the screen. They stare at you expectantly. A sinister looking attendant standing behind the bar administers play. 
 
@@ -117,5 +147,6 @@ When describing payout rates for particular game configurations, I stick with an
 * It may make sense to allow play with cylinders with different numbers of chambers in them, e.g. sizes of 5, 6, 10. Cylinders with more spots will generally have smaller payouts. My guess is 5 to 9 chambers would be the sweet-spot. People tend to overestimate the likelihood of very rare events, so a cylinder size of 20, 50, etc. would probably be too large^[The animation may also look awkward, as it would be a revolver with a tremendous number of bullets... a tommy gun would almost be more appropriate.] (as the smallness of payouts would not be commensurate with the *perceived* risk the player is taking on).
 * At the start, the player may be able to choose between two types of guns: a standard revolver, or a nerf gun equivalent. Both would play the same^[but may have slightly different animations when fired]. The nerf gun option is just a way of providing an option for players with a distaste for guns.
 * For cases where the game is played at a physical casino (rather than through an application), there could be a crank bar or wheel that when interacted with initiates the spinning of the cylinder. Once the cylinder stops spinning, there could also be a physical trigger that a player pulls in order to play the round^[For a phone or computer application, these parts of the game would be interacted with via touch screen or mouse.]. 
+* One limitation with the game is that it doesn't, as described, have the potential allure of a 'jackpot' which can be a highly motivating factor. Maybe there can be some imperceptible chance set that the bullet would hit a coin inside the wallet, deflect off, and hit the cashier where the attendant keeps the money, exploding that and thereby sending it to you (or some other contrivance to allow for the possibility of a jackpot).
 
 [^5]: As doing so goes against some of the psychological principles of the game (of keeping win-rates high) and risks making the payout rates for the player to be too explicit (when there is an equal likelihood of winning and losing it becomes obvious what the payout rate is... it may be to the houses advantage to keep this obscured). On the other hand, allowing this may be helpful in that it allows the player to set their risk threshold. On the whole I probably lean towards allowing the players to fill the gun with their wallets as it empowers them to pick their own risk level.
