--- a/content/post/2020-10-28-idea-for-casino-games-where-the-player-almost-always-win.Rmd
+++ b/content/post/2020-10-28-idea-for-casino-games-where-the-player-almost-always-win.Rmd
@@ -19,7 +19,7 @@ thumbnail: https://upload.wikimedia.org/wikipedia/commons/thumb/8/85/Loss_Aversi
 
 *A negated roulette wheel (where the point is to avoid, rather than land on, a specific number) provides a simple example of a game that captures these dynamics^[Credit card roulette (whereby friends throw in their cards at the end of dinner to see who will end-up paying for it) perhaps provides an everyday example for the type of game I'm talking about.].* 
 
-All types of games described in this post would need to be empirically evaluated in a gambling / gaming environment. The ideas are very much in a draft form^[There is a decent chance I misapplied some concepts -- particularly regarding the idea of risk seeking when it comes to losses (e.g. if it's more about seeking uncertainty vs seeking riskiness...). What I describe also seems to run counter to the idea that sporadic positive events help drive repeat behaviors whereas sporadic negative shocks drive avoidance of the activity. Generally I would need to think about and read a little more...]. The games discussed align with some psychological biases while potentially running counter to others^[A potential issue with my examples is with the 'framing effect' -- I largely frame things in terms of 'losses' (particularly in the [Wallet Roulette] game which may actually push players towards more risk-averse behavior. For example people's tendency to underweight rare events and a closer consideration of the importance of reference points are just a few ideas that require closer consideration.] -- reading more on [prospect theory](https://en.wikipedia.org/wiki/Prospect_theory) and related ideas is required to more carefully consider approaches in game design[^5]. *See [Note on Prospect Theory]^[Added after publishing post.] in the [Appendix] for a discussion on the errors I make throughout this post in applying psychological biases to gambling.*
+All types of games described in this post would need to be empirically evaluated in a gambling / gaming environment. The ideas are very much in a draft form^[There is a decent chance I misapplied some concepts -- particularly regarding the idea of risk seeking when it comes to losses (e.g. if it's more about seeking uncertainty vs seeking riskiness...). What I describe also seems to run counter to the idea that sporadic positive events help drive repeat behaviors whereas sporadic negative shocks drive avoidance of the activity. Generally I would need to think about and read a little more...]. The games discussed align with some psychological biases while potentially running counter to others^[A potential issue with my examples is with the 'framing effect' -- I largely frame things in terms of 'losses' (particularly in the [Wallet Roulette] game which may actually push players towards more risk-averse behavior. For example people's tendency to underweight rare events and a closer consideration of the importance of reference points are just a few ideas that require closer consideration.] -- reading more on [prospect theory](https://en.wikipedia.org/wiki/Prospect_theory) and related ideas is required to more carefully consider approaches in game design[^5]. *See [Note on Prospect Theory] in the [Appendix] for a retrospective discussion on errors I make in this post in applying psychological biases to gambling.*
 
 # Biases in Value
 
