--- a/content/post/2020-10-28-idea-for-casino-games-where-the-player-almost-always-win.Rmd
+++ b/content/post/2020-10-28-idea-for-casino-games-where-the-player-almost-always-win.Rmd
@@ -100,7 +100,7 @@ The paper describes gamblers with different starting profiles. Variety in motiva
 
 ## Wallet Roulette
 
-*Below I will describe the rules for a game that I've come-up with called "Wallet Roulette^[or "Russian Wallet Roulette" or some variation on this.]" that is designed to take advantage of the ideas described in the post above (the game though does not reflect a complete embodiment of Prospect Theory applied to gambling^[See footnotes from beginning of post for notes on this as well as the section [Note on Prospect Theory]. Obviously though this game is framed as a loss, which may run counter to the type of game that a Prospect Theory agent may want to play.]). The game is set-up to look and feel somewhat similar to a slot machine but with a win / loss structure that is almost the [complement](https://en.wikipedia.org/wiki/Complementary_event) of that in slots^[I.e. the player typically has small wins followed by occasional large losses whereas slots tend to have small losses with occasionally larger wins. However in the "Game Options" I provide ways by which a player could set their own risk profile (e.g. by filling their gun with more bullets, changing the cylinder size, etc.). Hence I also envision the game having a bit more customizability compared to what is typical in slots.].*
+*Below I will describe the rules for a game that I've come-up with called "Wallet Roulette^[or "Russian Wallet Roulette" or some variation on this.]" that is designed to take advantage of the ideas described in the post above^[The game though does not reflect a complete embodiment of Prospect Theory applied to gambling. See footnotes from beginning of post for notes on this as well as the section [Note on Prospect Theory]. Obviously though this game is framed as a loss, which may run counter to the type of game that a Prospect Theory agent may want to play.]. The game is set-up to look and feel somewhat similar to a slot machine but with a win / loss structure that is almost the [complement](https://en.wikipedia.org/wiki/Complementary_event) of that in slots^[I.e. the player typically has small wins followed by occasional large losses whereas slots tend to have small losses with occasionally larger wins (slots also feature small payouts, so this is speaking generally). In the "Game Options" I provide ways by which a player could set their own risk profile (e.g. by filling their gun with more bullets, changing the cylinder size, etc.). Hence I also envision the game having a bit more customizability compared to what is typical in slots.].*
 
 The virtual game is set in a dingy bar-like setting with shady (though cartoonish) figures holding wads of cash in their hands and crowded at the edges of the screen. They stare at you expectantly. A sinister looking attendant standing behind the bar administers play. 
 
